--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 Complete html , complete css. 
               </li>
               <li>
-               Have Goog communication skill.
+               Have Good communication skill.
               </li>
               <li>
                 Can do management.
