--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
           <h1 style="text-align: center;">About</h1>
         <p>
           <ul>
-           <li> Myself piyush new developer in a market still in progress.
-            It take me 4 months to become a fine developer 
+           <li> Myself Piyush Chauhan, currently learning full stack web devlopment.
            </li>
            <li>
             From dehradun which is situated in the lap of mountain. 
