--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div  id="name"> I Piyush</div>
         
         <div id="cont">
-          <h1  >contect details</h1>
+          <h1  >contact details</h1>
           <p>
             <ul>
           <li><b>contect</b> <a class="address" href="tel:9748276666"> -9179856345</a></li><br>
