--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p>
           <ul>
             <li>
-              I have played 2 nation in kabaddi
+              I have played 2 national in kabaddi
             </li>
             <li>
               Keen interest in sports.it keep me physically fit
