--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h1  >contact details</h1>
           <p>
             <ul>
-          <li><b>contect</b> <a class="address" href="tel:9748276666"> -9179856345</a></li><br>
+          <li><b>contact</b> <a class="address" href="tel:9748276666"> -9179856345</a></li><br>
           <li><b>gmail</b><a class="address" href="gmail:chauhnapiyush@197gmail.com">-  chauhan@gmail.com</a></li><br>
           <li><b>address</b><a class="address" href="">- chakrata</a></li>
           </ul>
